@@ -58,6 +58,15 @@ public final class JulianChronology extends CommonGJChronology {
     private static final long MILLIS_PER_MONTH =
         (long) (365.25 * DateTimeConstants.MILLIS_PER_DAY / 12);
 
+    // The lowest year that can be fully supported.
+    private static final int MIN_YEAR = -292269054;
+
+    // The highest year that can be fully supported. Although
+    // calculateFirstDayOfYearMillis can go higher without overflowing, the
+    // getYear method overflows when it adds the approximate millis at the
+    // epoch.
+    private static final int MAX_YEAR = 292271022;
+
     /** Singleton instance of a UTC JulianChronology */
     private static final JulianChronology INSTANCE_UTC;
 
@@ -202,6 +211,13 @@ public final class JulianChronology extends CommonGJChronology {
     }
 
     long calculateFirstDayOfYearMillis(int year) {
+        if (year > MAX_YEAR) {
+            throw new ArithmeticException("Year is too large: " + year + " > " + MAX_YEAR);
+        }
+        if (year < MIN_YEAR) {
+            throw new ArithmeticException("Year is too small: " + year + " < " + MIN_YEAR);
+        }
+
         // Java epoch is 1970-01-01 Gregorian which is 1969-12-19 Julian.
         // Calculate relative to the nearest leap year and account for the
         // difference later.
@@ -220,8 +236,7 @@ public final class JulianChronology extends CommonGJChronology {
             }
         }
         
-        long millis = (relativeYear * 365L + leapYears)
-            * (long)DateTimeConstants.MILLIS_PER_DAY;
+        long millis = (relativeYear * 365L + leapYears) * (long)DateTimeConstants.MILLIS_PER_DAY;
 
         // Adjust to account for difference between 1968-01-01 and 1969-12-19.
 
@@ -229,13 +244,11 @@ public final class JulianChronology extends CommonGJChronology {
     }
 
     int getMinYear() {
-        // The lowest year that can be fully supported.
-        return -292269054;
+        return MIN_YEAR;
     }
 
     int getMaxYear() {
-        // The highest year that can be fully supported.
-        return 292271022;
+        return MAX_YEAR;
     }
 
     long getAverageMillisPerYear() {
